fix leaderboard button, make ucf icon smaller

--- a/src/app/nav-bar/nav-bar.component.css
+++ b/src/app/nav-bar/nav-bar.component.css
@@ -12,7 +12,7 @@
 }
 
 img {
-  height: 40px;
+  height: 30px;
 }
 
 .nav-left .nav-logo {
